# lccApp

./: pyproject.toml
image_matcher/: db.sqlite3  load_images.py  manage.py  pyproject.toml
image_matcher/image_app/: compare_images.py  models.py  serializers.py  urls.py  views.py
image_matcher/image_app/migrations/: 0001_initial.py
image_matcher/image_app/templates/: home.html
image_matcher/image_matcher/: asgi.py  settings.py  urls.py  wsgi.py
